fix: global position and z-index

--- a/src/assets/scss/global/_reset.scss
+++ b/src/assets/scss/global/_reset.scss
@@ -163,8 +163,8 @@
         inset-inline-end: auto;
         inset-inline-start: auto;
         isolation: auto;
-        position: static;
-        z-index: auto;
+        position: relative;
+        z-index: -1;
         overlay: none;
 
         // Transform
